--- a/app/src/main/res/drawable/live_display_talk_rounded_button.xml
+++ b/app/src/main/res/drawable/live_display_talk_rounded_button.xml
@@ -6,5 +6,5 @@
         android:topRightRadius="15dip"/>
     <stroke
         android:width="1dip"
-        android:color="@color/colorAccent" />
+        android:color="@color/colorCommNotActive" />
 </shape>
