--- a/app/src/main/res/drawable/login_edit_text_bg.xml
+++ b/app/src/main/res/drawable/login_edit_text_bg.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@android:color/transparent"/>
-    <corners android:radius="20dp"/>
+    <corners android:radius="22dp"/>
     <stroke
         android:width="1dp"
-        android:color="@color/colorAccent" />
+        android:color="@color/colorCommNotActive" />
 </shape>
