--- a/app/src/main/res/drawable/selector_main_tab_text_color.xml
+++ b/app/src/main/res/drawable/selector_main_tab_text_color.xml
@@ -4,5 +4,5 @@
     <item android:color="@color/colorPrimary" android:state_pressed="true" />
     <item android:color="@color/colorPrimary" android:state_checked="true" />
 
-    <item android:color="@color/colorAccent" />
+    <item android:color="@color/colorCommNotActive" />
 </selector>
