--- a/app/src/main/res/layout/activity_login_new.xml
+++ b/app/src/main/res/layout/activity_login_new.xml
@@ -21,7 +21,7 @@
 
         <LinearLayout
             android:layout_width="290dp"
-            android:layout_height="40dp"
+            android:layout_height="44dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="25dp"
             android:background="@drawable/login_edit_text_bg"
@@ -38,7 +38,7 @@
                 android:layout_width="1dp"
                 android:layout_height="23dp"
                 android:layout_marginLeft="9dp"
-                android:background="@color/colorAccent" />
+                android:background="@color/colorCommNotActive" />
 
             <EditText
                 android:id="@+id/et_phone"
@@ -57,7 +57,7 @@
 
         <LinearLayout
             android:layout_width="290dp"
-            android:layout_height="40dp"
+            android:layout_height="44dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="16dp"
             android:background="@drawable/login_edit_text_bg"
@@ -74,7 +74,7 @@
                 android:layout_width="1dp"
                 android:layout_height="23dp"
                 android:layout_marginLeft="9dp"
-                android:background="@color/colorAccent" />
+                android:background="@color/colorCommNotActive" />
 
             <EditText
                 android:id="@+id/et_password"
@@ -95,7 +95,7 @@
         <Button
             android:id="@+id/btn_login"
             android:layout_width="290dp"
-            android:layout_height="40dp"
+            android:layout_height="44dp"
             android:enabled="false"
             android:background="@drawable/selector_comm_btn_bg"
             android:layout_gravity="center_horizontal"
