--- a/app/src/main/res/layout/item_city_layout.xml
+++ b/app/src/main/res/layout/item_city_layout.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -11,6 +10,6 @@
         android:layout_height="45dp"
         android:gravity="center"
         android:text="hello"
-        android:textSize="18sp"
-        android:textStyle="bold"/>
+        android:textColor="#000000"
+        android:textSize="18sp" />
 </LinearLayout>
