--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#21D790</color>
     <color name="colorPrimaryDark">#20D790</color>
-    <color name="colorAccent">#B9B9B9</color>
+    <color name="colorCommNotActive">#B9B9B9</color>
 
     <color name="tab_checked">#21D996</color>
     <color name="tab_unchecked">#B9B9B9</color>
@@ -143,4 +143,5 @@
     <color name="header">#58567D</color>
     <color name="appBg">#EBEAEA</color>
     <color name="btn_not_enable">#ffcccccc</color>
+    <color name="comm_white">#f9f9f9</color>
 </resources>
