--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,8 +7,10 @@
         <item name="android:windowNoTitle">true</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/colorPrimary</item>
         <item name="android:windowBackground">@color/appBg</item>
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:textSize">16sp</item>
     </style>
 
     <style name="MenuTextStyle">
@@ -135,5 +137,65 @@
         <item name="android:textSize">15sp</item>
         <item name="android:drawableRight">@drawable/selector_pay_way_rb</item>
         <item name="android:paddingRight">20dp</item>
+    </style>
+
+    <style name="fragmentTitleText">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">46dp</item>
+        <item name="android:background">@color/colorPrimary</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="me_horizontal_divider">
+        <item name="android:layout_width">0.5dp</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:background">#b9b9b9</item>
+        <item name="android:layout_alignParentRight">true</item>
+        <item name="android:layout_centerVertical">true</item>
+    </style>
+
+    <style name="me_option_item">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">45dp</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:paddingLeft">18dp</item>
+        <item name="android:paddingRight">20dp</item>
+        <item name="android:drawableRight">@drawable/arrowright</item>
+        <item name="android:background">#f9f9f9</item>
+        <item name="android:drawablePadding">10dp</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">#323232</item>
+    </style>
+
+    <style name="user_info_option_left_text">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_centerVertical">true</item>
+        <item name="android:layout_marginLeft">19dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/font_color_47</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="user_info_option_right_text">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_alignParentRight">true</item>
+        <item name="android:layout_marginRight">15dp</item>
+        <item name="android:drawablePadding">10dp</item>
+        <item name="android:drawableRight">@drawable/arrowright</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">#646464</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
+    <style name="user_info_option_divider">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:background">@color/font_color_12</item>
     </style>
 </resources>
