--- a/app/src/main/res/xml/filepaths.xml
+++ b/app/src/main/res/xml/filepaths.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths>
-    <files-path path="" name="images" />
+    <files-path path="." name="images" />
+    <external-path
+        name="my_images"
+        path="."/>
 </paths>
 
