--- a/app/src/main/res/layout/activity_register_layoyut.xml
+++ b/app/src/main/res/layout/activity_register_layoyut.xml
@@ -11,23 +11,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:background="@drawable/ic_footer_logo"
         app:layout_constraintEnd_toEndOf="parent"
-        android:background="@drawable/ic_footer_logo"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/register_user_name"
         android:layout_width="388dp"
         android:layout_height="54dp"
         android:layout_marginTop="34dp"
-        android:textSize="22sp"
         android:background="@drawable/login_edit_text_bg"
         android:drawableLeft="@drawable/ic_login_phone"
         android:drawablePadding="10dp"
         android:hint="@string/register_phone_editetxt"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/register_mengbi_logo"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/register_mengbi_logo" />
 
     <EditText
         android:id="@+id/register_user_email"
@@ -60,15 +60,15 @@
         android:layout_width="388dp"
         android:layout_height="54dp"
         android:layout_marginTop="22dp"
-        android:textSize="22sp"
-        android:inputType="textPassword"
         android:background="@drawable/login_edit_text_bg"
         android:drawableLeft="@drawable/ic_login_lock"
         android:drawablePadding="10dp"
         android:hint="@string/register_password_editetxt"
-        app:layout_constraintStart_toStartOf="parent"
+        android:inputType="textPassword"
+        android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/register_user_email"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/register_user_email" />
 
 
     <LinearLayout
@@ -77,37 +77,38 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="18dp"
         android:orientation="horizontal"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/register_user_password">
+
         <CheckBox
             android:id="@+id/register_user_checked"
             android:layout_width="26dp"
             android:layout_height="24dp"
             android:layout_marginTop="18dp"
             android:checked="true"
-            app:layout_constraintTop_toBottomOf="@id/register_user_password"/>
+            app:layout_constraintTop_toBottomOf="@id/register_user_password" />
 
         <TextView
             android:id="@+id/register_user_agree"
             android:layout_width="132dp"
             android:layout_height="24dp"
             android:layout_marginTop="18dp"
-            android:textSize="18sp"
             android:text="@string/register_agree_textview"
+            android:textSize="18sp"
             app:layout_constraintLeft_toRightOf="@id/register_user_checked"
-            app:layout_constraintTop_toBottomOf="@id/register_user_password"/>
+            app:layout_constraintTop_toBottomOf="@id/register_user_password" />
 
         <TextView
             android:id="@+id/register_user_service_agreement"
             android:layout_width="144dp"
             android:layout_height="24dp"
             android:layout_marginTop="18dp"
-            android:textSize="18sp"
-            android:textColor="@color/register_user_service_agreement"
             android:text="@string/register_service_agreement_textview"
+            android:textColor="@color/register_user_service_agreement"
+            android:textSize="18sp"
             app:layout_constraintLeft_toRightOf="@id/register_user_agree"
-            app:layout_constraintTop_toBottomOf="@id/register_user_password"/>
+            app:layout_constraintTop_toBottomOf="@id/register_user_password" />
 
     </LinearLayout>
 
@@ -121,6 +122,6 @@
         android:textColor="@color/textview"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/regsiter_agree_layout"/>
+        app:layout_constraintTop_toBottomOf="@id/regsiter_agree_layout" />
 
 </android.support.constraint.ConstraintLayout>
