普通用户不显示主播等级

--- a/app/src/main/res/layout/activity_user_info_layout.xml
+++ b/app/src/main/res/layout/activity_user_info_layout.xml
@@ -129,6 +129,7 @@
     -->
 
     <RelativeLayout
+        android:id="@+id/user_anchor_layout"
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:layout_marginTop="5dp"
