--- a/app/src/main/res/layout/item_anchor_followed.xml
+++ b/app/src/main/res/layout/item_anchor_followed.xml
@@ -34,7 +34,8 @@
             <ImageView
                 android:id="@+id/iv_level_icon"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="14dp"
+                />
         </LinearLayout>
 
         <TextView
