--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -198,4 +198,17 @@
         <item name="android:layout_height">1dp</item>
         <item name="android:background">@color/font_color_12</item>
     </style>
+
+    <style name="setting_option_text_style">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">45dp</item>
+        <item name="android:background">@color/comm_white</item>
+        <item name="android:drawableRight">@drawable/arrowright</item>
+        <item name="android:paddingRight">20dp</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:paddingLeft">13.5dp</item>
+        <item name="android:textColor">#323232</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">15sp</item>
+    </style>
 </resources>
