--- a/app/src/main/res/xml/filepaths.xml
+++ b/app/src/main/res/xml/filepaths.xml
@@ -2,7 +2,7 @@
 <paths>
     <files-path path="." name="images" />
     <external-path
-        name="my_images"
+        name="mengbi"
         path="."/>
 </paths>
 
