全局异常捕获, 打包工具集成, bug

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,8 +23,7 @@
         android:layout_weight="0"
         android:background="@color/white"
         android:orientation="horizontal"
-        android:paddingBottom="4dp"
-        android:paddingTop="8dp">
+        android:paddingBottom="4dp">
 
         <RadioButton
             android:id="@+id/rb_home"
