--- a/app/src/main/res/layout/dialog_audience_info.xml
+++ b/app/src/main/res/layout/dialog_audience_info.xml
@@ -44,8 +44,8 @@
                     android:layout_below="@id/tv_name"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="7dp"
-                    android:orientation="horizontal"
-                    android:minHeight="10dp">
+                    android:minHeight="10dp"
+                    android:orientation="horizontal">
 
                 </ImageView>
 
@@ -61,13 +61,13 @@
                     android:textStyle="bold" />
 
                 <LinearLayout
+                    android:id="@+id/ll_age_container"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/tv_user_id"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="10dp"
-                    android:orientation="horizontal"
-                    android:id="@+id/ll_age_container">
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/tv_age"
@@ -102,13 +102,16 @@
                     android:id="@+id/tv_introduce"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:singleLine="true"
-                    android:hint="@string/no_motto_hint"
                     android:layout_below="@id/ll_age_container"
-                    android:gravity="center"
+                    android:layout_marginBottom="30dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
                     android:layout_marginTop="10dp"
-                    android:textColor="#9e9e9e"
-                    android:layout_marginBottom="30dp" />
+                    android:gravity="center"
+                    android:hint="@string/no_motto_hint"
+                    android:maxLines="2"
+                    android:singleLine="true"
+                    android:textColor="#9e9e9e" />
 
                 <!--<LinearLayout-->
                 <!--android:id="@+id/ll_option_container"-->
@@ -159,11 +162,11 @@
                     android:id="@+id/btn_dismiss"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/close_p"
-                    android:background="@null"
                     android:layout_alignParentRight="true"
-                    android:padding="10.5dp" />
+                    android:background="@null"
+                    android:padding="10.5dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/close_p" />
             </RelativeLayout>
         </android.support.v7.widget.CardView>
 
@@ -173,8 +176,8 @@
             android:layout_height="58dp"
             android:layout_centerHorizontal="true"
             android:elevation="2dp"
-            app:civ_border_width="1dp"
-            app:civ_border_color="#b9b9b9" />
+            app:civ_border_color="#b9b9b9"
+            app:civ_border_width="1dp" />
 
     </RelativeLayout>
 
