--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -110,13 +110,14 @@
 
     <style name="main_tab">
         <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_height">match_parent</item>
         <item name="android:layout_weight">1</item>
         <item name="android:button">@null</item>
         <item name="android:gravity">center_horizontal</item>
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">@drawable/selector_main_tab_text_color</item>
         <item name="android:drawablePadding">2dp</item>
+        <item name="android:paddingTop">8dp</item>
     </style>
 
     <style name="recharge_divider_style">
