--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -144,4 +144,5 @@
     <color name="appBg">#EBEAEA</color>
     <color name="btn_not_enable">#ffcccccc</color>
     <color name="comm_white">#f9f9f9</color>
+    <color name="white">#FFFFFF</color>
 </resources>
