--- a/app/src/main/res/layout/fragment_home_new.xml
+++ b/app/src/main/res/layout/fragment_home_new.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/appBg">
+    android:background="@color/appBg"
+    android:orientation="vertical">
 
     <TextView
-        android:text="@string/home_title"
-        style="@style/fragmentTitleText" />
+        style="@style/fragmentTitleText"
+        android:text="@string/home_title" />
 
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:id="@+id/refresh_layout"
@@ -16,9 +16,11 @@
         android:layout_height="match_parent">
 
         <android.support.v4.widget.NestedScrollView
+            android:id="@+id/scroll_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:overScrollMode="never">
+            android:overScrollMode="never"
+            android:focusableInTouchMode="true">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -43,14 +45,14 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="38dp"
+                    android:layout_marginTop="9dp"
                     android:background="@color/white"
                     android:gravity="center_vertical"
                     android:paddingLeft="18dp"
                     android:text="小编推荐"
                     android:textColor="#323232"
                     android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:layout_marginTop="9dp" />
+                    android:textStyle="bold" />
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/recommend_recycler"
